Bug 834102 - [Browser] Too much padding to left of address in address bar

--- a/apps/browser/style/browser.css
+++ b/apps/browser/style/browser.css
@@ -277,14 +277,13 @@ input[type="image"] {
 #url-bar {
   display: -moz-box;
   -moz-box-orient: horizontal;
-  padding: 0;
   margin: 10px;
   border: solid 1px;
   border-color: #c1c5ce;
   border-radius: 5px;
   height: 34px;
   margin: 8px 0px 8px 5px;
-  padding: 0 0 0 10px;
+  padding-left: 0.5rem;
   background-color: #fff;
   font-weight: 600;
   width: calc(100% - 15px);
@@ -303,7 +302,7 @@ input[type="image"] {
   display: block;
   width: 24px;
   height: 34px;
-  margin-right: 5px;
+  margin-right: 0.3rem;
   text-indent: -1000em;
   background-repeat: no-repeat;
   background-position: center center;
@@ -327,6 +326,7 @@ input[type="image"] {
   height: 34px;
   -moz-box-flex: 1;
   margin: 0;
+  padding: 0;
   border: none;
   background-color: transparent;
   background: none;
@@ -968,7 +968,7 @@ li[role="listitem"] small {
  }
 
 /* This is a dirty hack to hide the bottom toolbar while
- * the keyboard is active, than device-height - 40px 
+ * the keyboard is active, than device-height - 40px
  * (for status bar/mini attention screen),
  * then the keyboard is likely activated
  */
